@@ -87,6 +87,7 @@ email=net.sourceforge.cruisecontrol.publishers.LinkEmailPublisher
 execute=net.sourceforge.cruisecontrol.publishers.ExecutePublisher
 ftppublisher=net.sourceforge.cruisecontrol.publishers.FTPPublisher
 htmlemail=net.sourceforge.cruisecontrol.publishers.HTMLEmailPublisher
+http=net.sourceforge.cruisecontrol.publishers.HTTPPublisher
 jabber=net.sourceforge.cruisecontrol.publishers.LinkJabberPublisher
 onfailure=net.sourceforge.cruisecontrol.publishers.OnFailurePublisher
 onsuccess=net.sourceforge.cruisecontrol.publishers.OnSuccessPublisher
