@@ -27,6 +27,10 @@ Configuration documentation generation
 ----------------------
 * Created addiitonal plugin superclasses to make generating configxml.html. Still a work in progress (CC-202). Patch by Jerome Lacoste.
 
+Http Publisher
+----------------------
+* New publisher to publish to via Http post, get, etc (CC-688). Contributed by Jonathan Gerrish.
+
 Mercurial Source Control & Bootstrapper
 ----------------------
 * Sourcecontrol & Bootstrapper implementation for Mercurial (hg) http://www.selenic.com/mercurial/wiki/ (CC-638). Submitted by Jerome Lacoste.
